test/expected/typedef_tni.out
typedef typename int Int
        ^
9: syntax error: "typename": unexpected token; not a keyword until C++98
